# pros-simulator-gui

./: .gitignore  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  typedoc.json
.github/workflows/: publish.yml
src/: App.svelte  build.ts  cli.ts  context.ts  controllers.ts  dark-mode.ts  database.ts  deps.d.ts  detectTransparencySupport.js  detectWindows10.js  main.ts  openFile.ts  pathDetector.ts  settings.ts  sidecar.ts  smart-devices.ts  splitpanes.scss  state.ts  styles.scss  utils.ts  window.ts  workspace.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/migrations/: 1.sql
src-tauri/src/: main.rs
src/lib/: Button.svelte  Card.svelte  Console.svelte  DeviceButton.svelte  DeviceDetailsView.svelte  DeviceGrid.svelte  DeviceIcon.svelte  DeviceListView.svelte  DevicePicker.svelte  DeviceView.svelte  Devices.svelte  DevicesView.svelte  Divider.svelte  Download.svelte  FirstTimeSetup.svelte  Form.svelte  Greet.svelte  LcdButton.svelte  LcdDisplay.svelte  Modal.svelte  Progress.svelte  RecentWorkspaces.svelte  SegmentedControl.svelte  Settings.svelte  TabView.svelte  Titlebar.svelte  ToolbarItem.svelte  TransitionHeight.svelte  WithContext.svelte  WorkspaceView.svelte
src/lib/devices/: ControllerDetails.svelte  DeviceButton.svelte  DeviceDetailView.svelte  DeviceListView.svelte
src/sidecar/: extract-worker.ts
