[package]
name = "pros-simulator-gui"
version = "0.4.0"
description = "A Tauri App"
authors = ["pros-rs"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "window-set-title",
    "shell-open",
    "shell-execute",
    "fs-read-file",
    "process-exit",
    "path-all",
    "fs-exists",
    "fs-write-file",
    "window-unmaximize",
    "window-start-dragging",
    "window-maximize",
    "dialog-open",
    "macos-private-api",
] }
window-vibrancy = "0.4.3"
tauri-plugin-persisted-scope = "0.1.3"
dirs = "5.0.1"
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", version = "0.0.0" }
tauri-plugin-gamepad = "0.0.2"
gilrs = { version = "0.10.4", features = ["serde-serialize"] }
serde = "1.0.193"
serde_json = "1.0.108"

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]                                   # or "postgres", or "mysql"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
